<resources>
    <string name="app_name" translatable="false">DB Weather</string>
    <string name="error_title">Oops! Sorry</string>
    <string name="error_message">There was an error. Please try again.</string>
    <string name="rain_title">Take an umbrella!</string>
    <string name="clear_night_title">Clear night with a beautiful sky!</string>
    <string name="clear_day_title">Wonderful day in sight!</string>
    <string name="snow_title">It\'s snowing!</string>
    <string name="sleet_title">Watch out slippery floor!</string>
    <string name="wind_title">Beware of winds!</string>
    <string name="fog_title">Watch out for the fog!</string>
    <string name="cloudy_title">Cloudy weather</string>
    <string name="partly_cloudy_day_title">Partly cloudy today</string>
    <string name="partly_cloudy_night_title">Partly cloudy this evening</string>
    <string name="clear_day_desc" translatable="false">The temperature outside is %1$d°\nI suggest getting dressed not to light and not heavy .\n\nEvery day is a good day to be alive, whether the sun\'s shining or not.</string>
    <string name="snow_desc" translatable="false">The temperature outside is %1$d°\nI suggest getting dressed heavy and take an umbrella if you plan going outside.\n\nA snowball in the face is surely the perfect beginning to a lasting friendship.</string>
    <string name="sleet_desc" translatable="false">The temperature outside is %1$d°\nWith the weather outside watch out for slippery floor!\n\nSometimes it takes a good fall to really know where you stand :)</string>
    <string name="wind_desc" translatable="false">The temperature outside is %1$d°\nBeware of winds and take a scarf.\n\nLife is like sailing. You can use any wind to go in any direction</string>
    <string name="fog_desc" translatable="false">The temperature outside is %1$d°\n\nDon’t let the agony, regret, or fog of yesterday blind you to the fact that each new day carries with it a plethora of opportunities to move your life into the right direction.</string>
    <string name="cloudy" translatable="false">The temperature outside is %1$d°\n\nOur mind is like a cloudy sky: in essence clear and pure, but overcast by clouds of delusions. Just as the thickest clouds can disperse, so, too, even the heaviest delusions can be removed from our mind.</string>
    <string name="partly_cloudy_day_desc" translatable="false">The temperature outside is %1$d°\n\nA cloudy day or a little sunshine have as great an influence on many constitutions as the most recent blessings or misfortunes.</string>
    <string name="partly_cloudy_night_desc" translatable="false">The temperature outside is %1$d°\n\nAll shadows of clouds the sun cannot hide like the moon cannot stop oceanic tide but a hidden star can still be smiling at night\'s black spell on darkness, beguiling</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="time_label">At %1$s, it was</string>
    <string name="windSpeedValue" translatable="false">%1$d mps</string>
    <string name="humidity_value" translatable="false">%1$d%%</string>
    <string name="cloudCoverValue" translatable="false">%1$d%%</string>
    <string name="precipChanceValue" translatable="false">%1$d%%</string>
    <string name="timeLabelValue">At %1$s, it will be</string>
    <string name="apparentTemperatureValue" translatable="false">%1$d°</string>
    <string name="hourly_time" translatable="false"> %1$s</string>
    <string name="hourly_temperature_value" translatable="false">%1$d°</string>
    <string name="error_could_not_load_articles">Could not load %1$s articles</string>
    <string-array name="default_sources">
        <item>hacker-news</item>
        <item>bbc-news</item>
        <item>cnn</item>
        <item>the-new-york-times</item>
        <item>four-four-two</item>
        <item>google-news</item>
        <item>national-geographic</item>
        <item>techcrunch</item>
        <item>the-guardian-uk</item>
    </string-array>
    <string name="network_unavailable_message">Network is unavailable!</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCoKnOw3xJFDUYkn72qKC8--DtJstej_tE</string>
    <string name="no_hourly_weather">There is no articles to display\nPlease activate your internet connection\nOr refresh</string>
    <string name="default_weather_summary">Getting current weather</string>
    <string name="action_about_us">About Us</string>
    <string name="news_from" translatable="false">%1$s</string>
    <string name="published_at">%1$s ago</string>
    <string name="precipeChanceTypeLabel" translatable="false">%1$s</string>
    <string name="open_in_browser_text">Open in Browser</string>
    <string name="open_in_browser">Details</string>
    <string name="close_window">Close the Window</string>
    <string name="weather_notification">Weather notification</string>
    <string name="manages_locations">Manages locations</string>
    <string name="translate_newspapers">Translate newspapers</string>
    <string name="manages_newspapers">Manages Newspapers</string>
    <string name="configuration_changed">change successfully saved</string>
    <string name="location_removed">Location removed</string>
    <string name="about_app">About the app</string>
    <string name="send_to">Share To</string>
    <string name="add_location_search_hint">Enter location name</string>
    <string name="dayTemps">%1$d°/%2$d°</string>
    <string name="location_permission_request">Please grant location permission to get the most accurate forecasts</string>
    <string name="news_powered_by" translatable="false">Powered By newsapi.org</string>
    <string name="waiting_page_desc">Downloading the articles\nThe app will automatically be launched\nThe connection may be slow</string>
    <string name="successfully_saved_configuration" translatable="false">Successfully Saved Configuration</string>
    <string name="unsuccessfully_saved_changes">Issue while saving Configuration</string>
    <string name="successfully_saved_changes">Successfully saved changes</string>
    <string name="weather_error_message">Error while retrieving weather information</string>
    <string name="weather_alert_channel_desc">This is forecast alerts</string>
    <string name="news_error_message">Error while loading news</string>
    <string name="newspapers_error_message">Error while loading newsPapers</string>
    <string name="lives_error_message">Error while loading live TV\'s</string>
    <string name="retry">Retry</string>
    <string name="degree_image_content_description" translatable="false">Degree Image</string>
    <string name="weather_icon_content_description" translatable="false">Weather Icon</string>
    <string name="hourly_image_icon" translatable="false">hourly Image Icon</string>
    <string name="screenshot_attemp_error">Error While Sharing the Data, Please try again</string>
    <string name="notification_alert_city">From %s</string>
    <string name="rain_desc">The temperature outside is %1$d°\n\n It\'s raining so don\'t get sick. DBWeather Team Love you :)</string>
    <string name="weather_label">Weather</string>
    <string name="news_tab_title">News</string>
    <string name="news_papers_label">Newspapers</string>
    <string name="lives_tv_tab_title">Live TV</string>
    <string name="youtube_live_label">Youtube Live TV</string>
    <string name="favorites_youtube_lives">Favorites Youtube Live TV</string>
    <string name="config_tab_title">Settings</string>
    <string name="display_add">Display and Add</string>
    <string name="help_config">Help</string>
    <string name="youtubeVideoImageUrl" translatable="false">https://img.youtube.com/vi/%s/hqdefault.jpg</string>
    <string name="locationName" translatable="false">%1$s, %2$s</string>
    <string name="imageFlag" translatable="false">http://www.geonames.org/flags/x/%s.gif</string>
    <string name="followButton">Follow Button</string>
    <string name="grantLocationButtonLabel">Sounds Good</string>
    <string name="deniedLocationButtonLabel">No Thanks</string>
    <string name="weather_powered_by" translatable="false">Powered by Dark Sky</string>
    <string name="made_by" translatable="false">Made by Darel Bitsy</string>
    <string name="search_location">Search location</string>
    <string name="no_locations_found">No locations found\nPlease add location</string>
    <string name="subscribe_to_news">Subscribe to sourcesJson</string>
    <string name="connection_issue">Issue while downloading the articles, retrying…</string>
    <string name="current_location">Current Location</string>
    <string name="report_bug">Report bugs</string>
    <string name="rate_on_play_store">Rate on Play Store</string>
    <string name="version" translatable="false">Version %1$d</string>
    <string name="SEND_EMAIL_FROM">Send email using</string>
    <string name="NO_EMAIL_CLIENTS">No email clients installed</string>
    <string name="unsuccessfully_saved">Error while saving changes</string>
    <string name="dayIconDescription">Day Icon</string>
    <string name="read_the_full_article">Read the full article</string>
    <string name="title_activity_intro">Intro</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="choose_location">Choose Location</string>
    <string name="use_gps_location">Use Gps Location</string>
    <string name="powered_by_dark_sky">Powered by Dark Sky</string>
    <string name="made_by_darel_bitsy">Made by Darel Bitsy</string>
    <string name="location_item_desc">Location item</string>
    <string name="city_name">City name</string>
    <string name="articleImage">Article Image</string>
    <string name="articleAuthor">Author: %1$s</string>
    <string name="default_author_name">Unknown</string>
    <string name="parentExpanded">parent expanded icon</string>
    <string name="parentIcon">parent icon</string>
    <string name="live_thumbnail">Live Thumbnail</string>
    <string name="bookmark_live_menu_title">Bookmark</string>
    <string name="humidity_icon">Humidity Icon</string>
    <string name="wind_icon">Wind Icon</string>
    <string name="cloud_cover_icon">Cloud Cover Icon</string>
    <string name="precip_icon">Precip Icon</string>
    <string name="sunrise_icon">Sunrise Icon</string>
    <string name="apparent_temperature_icon">Apparent Temperature Icon</string>
    <string name="sunset_icon">Sunset Icon</string>
    <string name="setting_icon">Setting Icon</string>
    <string name="configuration_icon">Configuration Icon</string>
    <string name="location_icon">Location Icon</string>
    <string name="find_newspaper">Find NewsPaper</string>
    <string name="enter_source_name">Enter newsPaper name</string>
    <string name="location_flag">Location Flag</string>
    <string name="share_with">Share with</string>
    <string name="share_article_text">Check out this news! Sent from DBWeather App\n</string>
    <string name="share_live_text">Check out this online Youtube TV\nSent from DBWeather App\nwww.youtube.com/watch?v=%1$s</string>
    <string name="open_with">Open with</string>
    <string name="open_full_screen">Expand</string>
    <string name="share">Share</string>
    <string name="source_language">Source Language</string>
    <string name="category">Category</string>
    <string name="availability">Availability</string>
    <string name="name">Name</string>
    <string name="ip_live_tv">IP Live TV</string>
    <string name="favorite_button">Favorite button</string>
    <string name="could_not_load_your_locations">Could not load your locations</string>
    <string name="published_at_days_ago">%1$dd ago</string>
    <string name="published_at_hours_ago">%1$dh ago</string>
    <string name="published_at_minutes_ago">%1$dm ago</string>
    <string name="published_at_seconds_ago">%1$ds ago</string>
    <string name="refresh">Refresh</string>
</resources>