<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (C) 2017 Darel Bitsy
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/appFeatures"
        android:checkableBehavior="single"
        android:orderInCategory="1">

        <item
            android:id="@+id/weather_feature"
            android:icon="@drawable/ic_weather"
            android:title="@string/weather_label" />

        <item
            android:id="@+id/news_papers_feature"
            android:icon="@drawable/ic_newspapers"
            android:title="@string/news_papers_label" />

        <item
            android:id="@+id/youtube_lives_feature"
            android:icon="@drawable/ic_youtube_live"
            android:title="@string/youtube_live_label" />

        <item
            android:id="@+id/ip_tv_feature"
            android:icon="@drawable/ic_ip_tv"
            android:title="@string/ip_live_tv" />
    </group>

    <group
        android:id="@+id/appFavorites"
        android:checkableBehavior="single"
        android:orderInCategory="2">

        <item
            android:id="@+id/favoriteYoutubeLives"
            android:icon="@drawable/ic_un_follow_icon_black"
            android:title="@string/favorites_youtube_lives" />
    </group>

    <group
        android:id="@+id/appSettings"
        android:checkableBehavior="single"
        android:orderInCategory="3">

        <item
            android:id="@+id/manage_locations"
            android:icon="@drawable/ic_city_location"
            android:title="@string/manages_locations" />

        <item
            android:id="@+id/weather_notification_status"
            android:icon="@drawable/ic_weather_notifications"
            android:title="@string/weather_notification"
            app:actionViewClass="android.support.v7.widget.SwitchCompat" />

        <item
            android:id="@+id/manage_sources"
            android:icon="@drawable/manage_sources"
            android:title="@string/manages_newspapers" />

        <item
            android:id="@+id/translate_newspapers"
            android:icon="@drawable/ic_translate_newspapers"
            android:title="@string/translate_newspapers"
            app:actionViewClass="android.support.v7.widget.SwitchCompat" />

    </group>

</menu>