<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (C) 2017 Darel Bitsy
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:padding="8dp"
    tools:background="?attr/colorPrimary">

    <ImageView
        android:id="@+id/weather_feature"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/weather_label"
        app:layout_constraintBottom_toTopOf="@+id/news_papers_feature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/ic_weather" />

    <ImageView
        android:id="@+id/news_papers_feature"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/news_papers_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/youtubeLiveFeature"
        app:layout_constraintStart_toEndOf="@id/weather_feature"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_newspapers" />

    <ImageView
        android:id="@+id/youtubeLiveFeature"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/youtube_live_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news_papers_feature"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:srcCompat="@drawable/ic_youtube_live" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather_feature"
        app:layout_constraintVertical_bias="1" />

</android.support.constraint.ConstraintLayout>