<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="Presenter"
            type="com.dbeginc.dbweather.splash.presenter.SplashPresenterImpl" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/splashLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/app_name" />

        <Button
            android:id="@+id/madeByMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made_by_darel_bitsy"
            android:layout_margin="8dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            app:layout_constraintLeft_toRightOf="@+id/poweredByDarkSky"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <Button
            android:id="@+id/poweredByDarkSky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powered_by_dark_sky"
            android:layout_margin="8dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/madeByMe"/>
    </android.support.constraint.ConstraintLayout>
</layout>